tests/expected_invalid_duplicate_contract_clauses.diag.out
<input>:8:46: error: function signature repeats `fails`
    public fn parse() -> Int fails Failure fails Failure {
                                                 ^^^^^^^
<input>:12:48: error: function signature repeats `grants`
    public fn start() -> Unit grants Access grants Access {
                                                   ^^^^^^
